Fix SASL mechanism acquisition in tests for __system user

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.11
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Security 2019-04-22, Security 2019-05-06, Security 2019-05-20
    • 13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In our tests, we rely on the fact that when accessing a mongos as the `__system` user, we have to connect to the admin database. However, we don't account for this in the authorization manager code for acquire user.

       

      ```
      StatusWith<UserHandle> AuthorizationManagerImpl::acquireUser(OperationContext* opCtx,
      const UserName& userName){
      if(userName == internalSecurity.user->getName())

      { return internalSecurity.user; }

      ```

            Assignee:
            Spencer Jackson
            Reporter:
            Shreyas Kalyan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: