SERVER-40315 Fix SASL mechanism acquisition for __system in tests